--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./public/icon.jpg" />
+    <link rel="icon" type="image" href="./public/jose 1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joseph Gachuru</title>
+    <title>     Joseph Gachuru</title>
   </head>
   <body>
     <div id="root"></div>
